--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
                                     Pokedex
                                     <ul style="display: none; position: absolute; background-color: green; padding: 0;">
                                         <li style="display: flex; align-items: center; padding: 10px;"><a href="/Pokemons" style="color: inherit; text-decoration: none;">National Pokedex</a></li>
-                                        <li style="display: flex; align-items: center; padding: 10px;"><a href="/Pokemons/index/1" style="color: inherit; text-decoration: none;">Generation 1</a></li>
-                                        <li style="display: flex; align-items: center; padding: 10px;"><a href="/Pokemons/index/2" style="color: inherit; text-decoration: none;">Generation 2</a></li>
+                                        <li style="display: flex; align-items: center; padding: 10px;"><a href="/Pokemons/Index/generation|1" style="color: inherit; text-decoration: none;">Generation 1</a></li>
+                                        <li style="display: flex; align-items: center; padding: 10px;"><a href="/Pokemons/Index/generation|2" style="color: inherit; text-decoration: none;">Generation 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
