--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,14 @@
-﻿@model IEnumerable<BulbaClone.Models.PkmnType>
+﻿@model ValueTuple<List<BulbaClone.Models.PkmnType>, List<string>>
+
+
 
 @{
     ViewData["Title"] = "Home Page";
+}
+
+@{
+    var pokemonTypes = Model.Item1;
+    var eggGroups = Model.Item2;
 }
 
 <div class="text-center">
@@ -15,10 +22,10 @@
             <div class="box-outer" style="width: 100%; border-radius: 9px; flex: 1; align-items: flex-start; display: flex; flex-direction: column;">
                 <ul style="list-style-position: outside; padding-left: 20px; display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;">
                     @for(var i = 1;i < 10;i++) {
-                    <li style="display: list-item; align-items: flex-start; justify-content: flex-start;">
-                        <a href="/Pokemons/Index/generation|@(i)" style="color: inherit; text-decoration: none;">Generation @(i)</a>
-                    </li>
-        }
+                        <li style="display: list-item; align-items: flex-start; justify-content: flex-start;">
+                            <a href="/Pokemons/Index/generation|@(i)" style="color: inherit; text-decoration: none;">Generation @(i)</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
@@ -31,11 +38,27 @@
             <div class="box-outer" style="width: 100%; border-radius: 9px; flex: 1; align-items: flex-start; display: flex; flex-direction: column;">
 
                 <ul style="list-style-position: outside; padding-left: 20px; display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;">
-                    @foreach(var pkmnType in Model) {
+                    @foreach(var pkmnType in pokemonTypes) {
                     <li style="display: list-item; align-items: flex-start; justify-content: flex-start;">
                         <a href="/Pokemons/Index/type|@(pkmnType.Name)" style="color: inherit; text-decoration: none;">@(pkmnType.Name)</a>
                     </li>
                     }
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="flex-container" style="display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start; width: 100%;">
+
+            Pokemon By Egg Group:
+            <div class="box-outer" style="width: 100%; border-radius: 9px; flex: 1; align-items: flex-start; display: flex; flex-direction: column;">
+
+                <ul style="list-style-position: outside; padding-left: 20px; display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;">
+                    @foreach(var eggGroup in eggGroups) {
+                    <li style="display: list-item; align-items: flex-start; justify-content: flex-start;">
+                        <a href="/Pokemons/Index/eggGroup|@(eggGroup)" style="color: inherit; text-decoration: none;">@(eggGroup)</a>
+                    </li>
+                }
                 </ul>
 
             </div>
