Implemented indexing based on 'color'.

--- a/Views/Pokemons/Forms.cshtml
+++ b/Views/Pokemons/Forms.cshtml
@@ -333,7 +333,7 @@
                         </b>
                     </span>
                     <div class="box-inner" style="background-color: #FFFFFF; ">
-                        @(form.color)
+                        <a href="/Pokemons/Index/color|@(form.color)" style="color: inherit; text-decoration: none;">@(form.color)</a>
                     </div>
                 </div>
 
